# unearthedarcana

./: README.md  detect_magic.py  pyproject.toml  requirements.txt  scraper.py  setup.py  unearthedarcanabot.py
.fluxconf/UABot/: base.yaml
cogs/: __init__.py  lfg_mirror.py  output.py
