[tool.poetry]
name = "unearthedarcanabot"
version = "0.1.6"
description = ""
authors = ["Zenith <z@zenith.dev>"]

[tool.poetry.dependencies]
python = "~3.9"
beautifulsoup4 = "^4.9.3"
aurflux = "^3.3.19"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
pylint = "^2.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.yapf]
COLUMN_LIMIT = 180